force-app/main/default/objects/Position__c/fields/Number_Applications__c.field-meta.xml
<CustomField>
    <fullName>Number_Applications__c</fullName>
    <label>Number_Applications</label>
    <summaryForeignKey>Job_Posting__c.Position__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>