force-app/main/default/objects/Position__c/fields/reviews__c.field-meta.xml
<CustomField>
    <fullName>reviews__c</fullName>
    <formula>Application__r.Review__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>reviews</label>
    <type>Text</type>
</CustomField>