force-app/main/default/objects/Position__c/validationRules/Not_delete_if_Number_Applications.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_delete_if_Number_Applications</fullName>
    <active>true</active>
    <errorConditionFormula>Number_Applications__c &lt; PRIORVALUE(Number_Applications__c)</errorConditionFormula>
    <errorMessage>No se puede borrar</errorMessage>
</ValidationRule>